--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,45 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url(/images/airport.png);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.container {
+  display: flex;
+}
+
+.board {
+  margin: 8px;
+  border: 1px solid lightgrey;
+  border-radius: 2px;
+  width: 220px;
+
+  display: flex;
+  flex-direction: column;
+
+  background: rgba(255,255,255,.5);
+}
+
+.column {
+  padding:8px;
+  flex-grow: 1;
+  min-height: 200px;
+}
+
+.item {
+  border: 1px solid lightgrey;
+  border-radius: 2px;
+  padding: 8px;
+  background-color: white;
+  margin-bottom: 8px;
+  
+}
+
+h3 {
+  padding: 8px;
 }
