--- a/src/index.css
+++ b/src/index.css
@@ -14,14 +14,27 @@ code {
 }
 
 .container {
+  margin: 8px;
   display: flex;
+  overflow-x: scroll;
 }
 
 .board {
-  margin: 8px;
+  margin-right: 8px;
   border: 1px solid lightgrey;
   border-radius: 2px;
   width: 220px;
+
+  display: flex;
+  flex-direction: column;
+
+  background: rgba(255,255,255,.5);
+}
+
+.board-horizontal {
+  border: 1px solid lightgrey;
+  border-radius: 2px;
+  width: 100%;
 
   display: flex;
   flex-direction: column;
@@ -33,9 +46,19 @@ code {
   padding:8px;
   flex-grow: 1;
   min-height: 300px;
+  min-width: 200px;
 }
 
+.column-horizontal {
+  padding:8px;
+  display: flex;
+  overflow-x: scroll;
+}
+
+
+
 .item {
+  margin: 2px;
   border: 1px solid lightgrey;
   border-radius: 2px;
   padding: 8px;
