--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ code {
   display: flex;
   flex-direction: column;
 
-  background: rgba(255,255,255,.5);
+  background: rgba(255,255,255,.7);
 }
 
 .board-horizontal {
@@ -39,7 +39,7 @@ code {
   display: flex;
   flex-direction: column;
 
-  background: rgba(255,255,255,.5);
+  background: rgba(255,255,255,.7);
 }
 
 .column {
@@ -56,7 +56,6 @@ code {
 }
 
 
-
 .item {
   margin: 2px;
   border: 1px solid lightgrey;
@@ -69,4 +68,24 @@ code {
 
 h3 {
   padding: 8px;
+}
+
+input[type=text] {
+  padding: 12px 20px;
+  margin: 8px;
+  border: none;
+  border-radius: 3px;
+  box-sizing: border-box;
+}
+
+button {
+  padding: 12px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #999;
 }
