--- a/src/index.css
+++ b/src/index.css
@@ -78,6 +78,11 @@ input[type=text] {
   box-sizing: border-box;
 }
 
+.select-css {
+  font-size: 16px;
+  margin: 8px;
+}
+
 button {
   padding: 12px 20px;
   margin: 8px 0;
