--- a/src/index.css
+++ b/src/index.css
@@ -13,20 +13,25 @@ code {
     monospace;
 }
 
-.container {
-  margin: 8px;
+.page-container {
+  padding: 40px;
+}
+
+.column-container {
   display: flex;
+  padding-bottom: 16px;
   overflow-x: scroll;
 }
+
 
 .board {
   margin-right: 8px;
   border: 1px solid lightgrey;
   border-radius: 2px;
-  width: 220px;
-
+  min-width: 220px;
   display: flex;
   flex-direction: column;
+
 
   background: rgba(255,255,255,.7);
 }
@@ -80,7 +85,6 @@ input[type=text] {
 
 .select-css {
   font-size: 16px;
-  margin: 8px;
 }
 
 button {
@@ -102,3 +106,14 @@ img {
 
 }
 
+.map {
+  width: 100%;
+  height: 220px;
+}
+
+.pin {
+  height: 10px;
+  width: 10px;
+  background-color: red;
+  border-radius: 50%;
+}
