--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -1,7 +1,7 @@
-$whiteOverlay: rgba(255,255,255,.7);
+$whiteOverlay: rgba(0, 0, 0, 0.1);
 @mixin boardStandard() {
-  border: 1px solid lightgrey;
-  border-radius: 2px;
+  border: 2px solid lightgrey;
+  border-radius: 5px;
   display: flex;
   flex-direction: column;
   background: $whiteOverlay;
@@ -14,19 +14,20 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url(/images/airport.png);
+  //background-image: url(/images/airport.png);
   padding: 40px;
 }
 
-.boards-container {
+.day-boards-container {
   display: flex;
-  padding-bottom: 16px;
+  padding-bottom: 15px;
+  padding-top: 20px;
   overflow-x: scroll;
 }
 
-.board-day {
+.day-board {
   @include boardStandard();
-  margin-right: 8px;
+  margin-right: 15px;
   min-width: 350px;
   .droppable {
     padding:8px;
@@ -36,9 +37,16 @@ body {
   }
 }
 
-.board-places {
+.place-boards-container {
+  display: flex;
+  padding-bottom: 16px;
+  overflow-x: scroll;
+}
+
+.place-board {
   @include boardStandard();
-  width: 100%;
+  width: 60%;
+  margin-right: 15px;
   .droppable {
     padding: 8px;
     display: flex;
@@ -52,11 +60,12 @@ body {
   font-weight: 500;
 }
 
+
 .item {
   margin: 2px;
   min-width: 200px;
   .toggle-body {
-    max-width: 300px;
+    max-width: 320px;
     max-height: 200px;
     overflow-y: scroll;
   }
@@ -69,11 +78,11 @@ body {
 
 //header select input 
 input[type=text] {
-  padding: 12px 20px;
   margin: 8px;
   border: none;
   border-radius: 3px;
   box-sizing: border-box;
+  background-color: #f8f8f8;
 }
 
 .select-css {
@@ -81,10 +90,10 @@ input[type=text] {
 }
 
 button {
-  padding: 12px 20px;
   margin: 8px 0;
   border: none;
   cursor: pointer;
+  background-color: #f8f8f8;
   &:hover {
     background-color: #999;
     color: white;
