--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -1,7 +1,10 @@
-$whiteOverlay: rgba(0, 0, 0, 0.1);
+$whiteOverlay: white;
+
+// whiteoverlay rgba(0, 0, 0, 0.1)
 @mixin boardStandard() {
-  border: 2px solid lightgrey;
+  border: 2px solid #fdc8b7;
   border-radius: 5px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   display: flex;
   flex-direction: column;
   background: $whiteOverlay;
@@ -14,20 +17,24 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f7f7f7;
   //background-image: url(/images/airport.png);
   padding: 40px;
 }
 
 .day-boards-container {
   display: flex;
-  padding-bottom: 15px;
-  padding-top: 20px;
+  box-shadow: inset 4px 4px 9px -2px rgba(0,0,0,0.2);
+  border-radius: 5px;
+  padding: 10px 0px 15px 10px;
+  margin-bottom: 20px;
+  //padding-top: 20px;
   overflow-x: scroll;
 }
 
 .day-board {
   @include boardStandard();
-  margin-right: 15px;
+  margin: 8px;
   min-width: 350px;
   .droppable {
     padding:8px;
@@ -39,14 +46,17 @@ body {
 
 .place-boards-container {
   display: flex;
-  padding-bottom: 16px;
+  box-shadow: inset 4px 4px 9px -2px rgba(0,0,0,0.2);
+  border-radius: 5px;
+  padding: 10px 0px 15px 10px;
+  //padding-bottom: 16px;
   overflow-x: scroll;
 }
 
 .place-board {
   @include boardStandard();
   width: 60%;
-  margin-right: 15px;
+  margin: 8px;
   .droppable {
     padding: 8px;
     display: flex;
@@ -58,6 +68,7 @@ body {
   padding: 8px;
   font-size: 20px;
   font-weight: 500;
+  color: #546d79;
 }
 
 
@@ -98,6 +109,16 @@ button {
     background-color: #999;
     color: white;
   }
+}
+
+.extra-day{
+  max-height: 28px;
+  max-width: 35px;
+  padding-bottom: 10px;
+  background-color: #fdc8b7;
+  color: white;
+  border-radius: 35px;
+  margin: auto;
 }
 
 //map and pins
