--- a/frontend/src/Styles/index.scss
+++ b/frontend/src/Styles/index.scss
@@ -102,13 +102,13 @@ img {
 }
 
 //header select input 
-input[type=text] {
-  margin: 8px;
-  border: none;
-  border-radius: 3px;
-  box-sizing: border-box;
-  background-color: #f8f8f8;
-}
+// input[type=text] {
+//   margin: 8px;
+//   border: none;
+//   border-radius: 3px;
+//   box-sizing: border-box;
+//   background-color: #f8f8f8;
+// }
 
 .select-css {
   font-size: 16px;
